refactor: rename project fskitty → fs-kitty, Spike1 → FsKitty
Standardize naming conventions across the project:
- Crate names: fskitty-* → fs-kitty-* (Cargo convention)
- Spike crates: spike-vfs-* → fs-kitty-* (proper naming)
- Swift package: Spike1 → FsKitty (PascalCase convention)
- Update all imports, docs, and references accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 version = "0.1.0"
 edition = "2024"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/bearcove/fskitty"
+repository = "https://github.com/bearcove/fs-kitty"
 
 [workspace.dependencies]
 # Swift bridge
