feat: add xcodegen build system and fix FSKit extension
- Add Justfile with build recipes (build-rust, build-xcode, etc.)
- Add xcodegen project.yml for reproducible Xcode project generation
- Define entitlements inline in project.yml (no manual file management)
- Add -allowProvisioningUpdates flag for automatic signing
- Update FsKittyApp to auto-register extension via pluginkit on launch
- Fix swift-bridge FFI to use parallel arrays (workaround for Vec<Struct>)
- Fix Swift 6 concurrency issues with @unchecked Sendable
- Fix FSItem.ItemType enum cases (.file/.symlink vs .regular/.symbolicLink)
- Update bundle IDs to me.amos.fs-kitty for personal dev account

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ swift-bridge-build = "0.1"
 # Async runtime
 tokio = { version = "1", features = ["full"] }
 
-# Rapace (local)
-rapace = { path = "../rapace/crates/rapace" }
-rapace-core = { path = "../rapace/crates/rapace-core" }
+# Rapace (git)
+rapace = { git = "https://github.com/bearcove/rapace" }
+rapace-core = { git = "https://github.com/bearcove/rapace" }
 
 # Serialization (must match rapace's facet version)
 facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["camino"] }
