fix: FSKit extension now launches successfully
Major breakthrough - the extension process spawns and handles filesystem operations!

Root cause: Stale network policy cache
- nesessionmanager cached old bundle ID (com.bearcove.fskitty) network policies
- Even after changing to me.amos.fs-kitty.ext, the cache blocked extension launch
- Solution: sudo defaults delete /Library/Preferences/com.apple.networkextension

Key fixes:
1. Changed product type from app-extension to extensionkit-extension in xcodegen
   - FSKit modules require ExtensionKit, not legacy app extensions
   - Creates proper Contents/Extensions/ embed path

2. Entitlements refined to minimal required set:
   - com.apple.security.app-sandbox (required for pluginkit registration)
   - com.apple.security.network.client (for VFS TCP connection)
   - com.apple.developer.fskit.fsmodule (FSKit capability)

3. Added comprehensive debug logging with emoji markers:
   - 🚀 Extension init
   - 🌉 Bridge initialization
   - 📋 probeResource
   - 📦 loadResource
   - 🔗 VFS connection

Current status:
- Extension registers with pluginkit ✓
- Extension process spawns (seen in logs) ✓
- FSKit calls our volume operations ✓
- VFS server receives get_attributes, lookup requests ✓
- Known issue: facet JIT "Shape not compatible" errors need investigation

--- a/xcode/project.yml
+++ b/xcode/project.yml
@@ -37,7 +37,7 @@ targets:
         codeSign: true
 
   FsKittyExt:
-    type: app-extension
+    type: extensionkit-extension
     platform: macOS
     sources:
       - path: FsKittyExt
