docs: update READMEs with vixen context and completion status
- Add fs-kitty-proto README with vixen hermetic build context
- Mark signing and filesystem mounting as complete in main README
- Explain purpose: build hermeticity and on-the-fly materialization
- Add links to bearcove/vixen project
- Update proto crate metadata

--- a/crates/fs-kitty-proto/Cargo.toml
+++ b/crates/fs-kitty-proto/Cargo.toml
@@ -2,7 +2,9 @@
 name = "fs-kitty-proto"
 version.workspace = true
 edition.workspace = true
-description = "Shared VFS protocol types for fs-kitty"
+description = "VFS protocol for fs-kitty - implement the Vfs trait to create your own backend"
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 rapace.workspace = true
