Use purrrfect logo, require macOS 26 to use URL

--- a/xcode/FsKittyExt/Info.plist
+++ b/xcode/FsKittyExt/Info.plist
@@ -56,9 +56,13 @@
 		<key>FSShortName</key>
 		<string>fskitty</string>
 		<key>FSSupportsBlockResources</key>
-		<true/>
-		<key>FSSupportsGenericURLResources</key>
 		<false/>
+		<key>FSSupportsGenericURLResources</key>
+		<true/>
+		<key>FSSupportedSchemes</key>
+		<array>
+			<string>fskitty</string>
+		</array>
 		<key>FSSupportsPathURLs</key>
 		<false/>
 		<key>FSSupportsServerURLs</key>
