--- a/xcode/project.yml
+++ b/xcode/project.yml
@@ -31,6 +31,7 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: me.amos.fs-kitty
         INFOPLIST_FILE: FsKitty/Info.plist
         GENERATE_INFOPLIST_FILE: false
+        ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
     dependencies:
       - target: FsKittyExt
         embed: true
@@ -54,9 +55,10 @@ targets:
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: me.amos.fs-kitty.ext
-        PRODUCT_NAME: FsKittyExt
+        PRODUCT_NAME: fs-kitty
         INFOPLIST_FILE: FsKittyExt/Info.plist
         GENERATE_INFOPLIST_FILE: false
+        ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         # Swift settings
         SWIFT_OBJC_BRIDGING_HEADER: ""
         SWIFT_INCLUDE_PATHS: "$(SRCROOT)/FsKittyExt/BridgeHeaders"
