refactor: Complete migration from rapace to roam
- Replace rapace dependency with roam + roam-stream
- Server: use VfsDispatcher + roam_stream::accept instead of
  VfsServer + rapace Transport/RpcSession
- Client: use roam_stream::connect with Connector trait instead of
  manual RpcSession management
- Add &roam::session::Context parameter to all Vfs trait impls
- Make MemoryVfs Clone via Arc<RwLock<...>> internals
- Update proto doc comments to reflect new signatures
- Remove rapace from workspace dependencies

--- a/crates/fs-kitty-client/Cargo.toml
+++ b/crates/fs-kitty-client/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 [dependencies]
 fs-kitty-proto = { path = "../fs-kitty-proto" }
 tokio.workspace = true
-rapace = { workspace = true, features = ["stream"] }
+roam-stream.workspace = true
 facet.workspace = true
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
