Fix CI: clippy, fmt, no-tests pass, remove Xcode job
- Collapse nested if into let-chain (clippy::collapsible-if)
- Run cargo fmt
- Pass --no-tests=pass to nextest (no tests yet)
- Remove Swift/Xcode CI job (requires macOS 26, no runners available)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,25 +62,4 @@ jobs:
         run: cargo build --all-targets
 
       - name: Test
-        run: cargo nextest run
-
-  swift-xcode:
-    name: Swift / Xcode Build
-    runs-on: depot-macos-15
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Install xcodegen
-        run: brew install xcodegen
-
-      - name: Build Xcode project (Release)
-        run: |
-          cd xcode && xcodegen generate
-          cd ..
-          mkdir -p build
-          xcodebuild -project xcode/FsKitty.xcodeproj \
-            -scheme FsKitty \
-            -configuration Release \
-            -allowProvisioningUpdates \
-            build \
-            SYMROOT="$(pwd)/build"
+        run: cargo nextest run --no-tests=pass
